# tauri-plugin-web-bluetooth-api

./: .eslintrc.cjs  Cargo.toml  README.md  README_CN.md  eslint.config.js  package.json  pnpm-lock.yaml  tsdown.config.ts
examples/tauri-app/: eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connect_gatt.toml  disconnect_gatt.toml  forget_device.toml  get_availability.toml  get_characteristics.toml  get_devices.toml  get_primary_services.toml  read_characteristic_value.toml  request_device.toml  start_notifications.toml  stop_notifications.toml  write_characteristic_value.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
