[package]
name = "tauri-plugin-web-bluetooth"
version = "0.1.0"
authors = ["ParticleG <particle_g@outlook.com>"]
description = "Tauri adapter for Web Bluetooth API"
edition = "2021"
rust-version = "1.77.2"
exclude = [
    "/examples",
    "/dist-js",
    "/guest-js",
    "/node_modules",
    "/.prettierrc.json",
]
links = "tauri-plugin-web-bluetooth"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
