[package]
name = "tauri-plugin-web-bluetooth"
version = "0.1.0"
authors = ["ParticleG <particle_g@outlook.com>"]
description = "Tauri adapter for Web Bluetooth API"
edition = "2021"
rust-version = "1.77.2"
exclude = [
    "/examples",
    "/dist-js",
    "/guest-js",
    "/node_modules",
    "/.prettierrc.json",
]
links = "tauri-plugin-web-bluetooth"

[dependencies]
base64 = "0.22.1"
btleplug = { version = "0.11.7", features = ["serde"] }
futures = "0.3.31"
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
thiserror = "2"
tokio = { version = "1.43.0", features = ["rt", "time", "sync"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
